<resources>
    <string name="app_name">HuaWeiCloudDemo</string>
    <string name="back_desc">返回上一级</string>
    <string name="login_title">账号登录</string>
    <string name="log_method_desc">切换登录方式</string>
    <string name="log_with_iam">IAM用户登录</string>
    <string name="forget_pass">忘记密码</string>
    <string name="create_account">注册账号</string>
    <string name="input_account_hint">手机号/账号名/邮箱</string>
    <string name="input_password_hint">密码</string>
    <string name="login_btn">登录</string>
    <string name="clear_input_desc">清除输入</string>
    <string name="visible_pass_desc">切换明文密码</string>
</resources>