<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root_view_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/login_title_bar_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_top_back_iv"
            android:layout_width="@dimen/top_back_btn"
            android:layout_height="@dimen/top_back_btn"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_desc"
            android:padding="5dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/login_top_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:text="@string/login_title"
            android:textColor="@color/main_text_222"
            android:textSize="20sp"
            android:visibility="gone"
            tools:visibility="visible" />
    </RelativeLayout>

    <TextView
        android:id="@+id/login_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title_bar_rl"
        android:gravity="center_horizontal"
        android:text="@string/login_title"
        android:textColor="@color/main_text_222"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/change_login_method_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title_tv"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:gravity="center_horizontal"
        android:text="@string/log_with_iam"
        android:textColor="@color/more_log_method"
        android:textSize="14sp"
        app:drawableEndCompat="@drawable/ic_forward"
        app:drawableRightCompat="@drawable/ic_forward" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_footer_ll"
        android:layout_below="@+id/change_login_method_tv"
        android:orientation="vertical">

        <TextView
            android:id="@+id/account_input_top_hint_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/account_input_ll"
            android:text="@string/input_account_hint"
            android:textColor="@color/hint_gray_light"
            android:textSize="12sp"
            android:visibility="invisible"
            tools:visibility="visible" />


        <LinearLayout
            android:id="@+id/account_input_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/password_input_top_hint_tv"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_login_input"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <EditText
                android:id="@+id/account_input_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="account"
                android:background="#ffff"
                android:hint="@string/input_account_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="32"
                android:maxLines="1"
                android:textColorHint="@color/hint_gray_light" />

            <ImageView
                android:id="@+id/clear_account_text_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/clear_input_desc"
                android:padding="5dp"
                android:src="@drawable/ic_cancel"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>

        <TextView
            android:id="@+id/password_input_top_hint_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/password_input_ll"
            android:text="@string/input_password_hint"
            android:textColor="@color/hint_gray_light"
            android:textSize="12sp"
            android:visibility="invisible"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/password_input_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/do_login_btn"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_login_input"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <EditText
                android:id="@+id/password_input_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="account"
                android:background="#ffff"
                android:hint="@string/input_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="32"
                android:textColorHint="@color/hint_gray_light" />

            <ImageView
                android:id="@+id/clear_pass_text_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/clear_input_desc"
                android:padding="5dp"
                android:src="@drawable/ic_cancel"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/password_visible_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/visible_pass_desc"
                android:padding="5dp"
                android:src="@drawable/ic_eye_close" />
        </LinearLayout>


        <TextView
            android:id="@+id/do_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_footer_ll"
            android:background="@drawable/bg_login_confirm_btn"
            android:enabled="false"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:layout_marginBottom="50dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_footer_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_forget_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/forget_pass"
            android:textColor="@color/more_log_method"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="14dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/login_create_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/create_account"
            android:textColor="@color/more_log_method"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>